[project]
name = "jax_flash_attn"
description = "Flash attention CUDA kernels for jax"
authors = []
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "jax[cuda12]>=0.7.0",
    "jaxlib>=0.7.0",
]

[dependency-groups]
test = [
    "flax",
]

[build-system]
requires = [
    "pybind11>=2.6",
    "scikit-build-core>=0.5",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/jax_flash_attn/jax_flash_attn.py"]
wheel.install-dir = "jax_flash_attn"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"

[tool.setuptools_scm]

[tool.maturin]
python-source = "python"
module-name = "jflash_attn._jflash_attn"
